--- a/euro2016/index.html
+++ b/euro2016/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=320" />
     <style>
         body {
             font-family: arial;
@@ -43,6 +44,9 @@
         table {
             background-color: #fff;
             margin-left: 10px;
+        }
+        #root {
+            width: 300px;
         }
 
     </style>
