Added the rest of the bunch

--- a/euro2016/index.html
+++ b/euro2016/index.html
@@ -66,6 +66,10 @@
     <script src="kit.js" ></script>
     <script src="cbystrom.js" ></script>
     <script src="jhamren.js" ></script>
+    <script src="msjolund.js" ></script>
+    <script src="aveline.js" ></script>
+    <script src="elundin.js" ></script>
+    <script src="mhansson.js" ></script>
 
     <script src="results.js" ></script>
     <script src="ui.js" ></script>
